recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value step
  current(step) 
          ^Tree:14: error: not found: value leveVrosse
    leveVrosse()
    ^